syntax = "proto3";

package checkout_v1;

option go_package = "gitlab.ozon.dev/kaktusv6/Homework/pkg/checkout_v1;checkout_v1";

import "google/protobuf/empty.proto";

service CheckoutV1 {
  rpc AddToCart (ItemInfoRequest) returns (google.protobuf.Empty);
  rpc DeleteFromCart (ItemInfoRequest) returns (google.protobuf.Empty);
  rpc ListCart (UserInfo) returns (CartInfo);
  rpc Purchase (UserInfo) returns (google.protobuf.Empty);
}

message ItemInfoRequest {
  int64 user = 1;
  uint32 sku = 2;
  int32 count = 3;
}

message UserInfo {
  int64 user = 1;
}

message CartInfo {
  repeated CartItem items = 1;
  uint32 total_price = 2;
}

message CartItem {
  uint32 sku = 1;
  int32 count = 2;
  string name = 3;
  uint32 price = 4;
}